--- a/ServerChat/pom.xml
+++ b/ServerChat/pom.xml
@@ -8,9 +8,21 @@
     <artifactId>Java3_1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.23</version>
+    </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+
+
 
 </project>
